[package]
name = "bpm-detector"
version = "0.1.0"
edition = "2021"

[dependencies]
# Décodage audio
hound = "3.5"  # Simple et direct pour WAV

# FFT pour l'analyse spectrale
rustfft = "6.2"
num-complex = "0.4"

# Fenêtrage et DSP
dasp_window = "0.11"

# Opérations sur tableaux
ndarray = "0.15"

# Rééchantillonnage
rubato = "0.14"

# Utilitaires
anyhow = "1.0"  # Gestion d'erreurs
thiserror = "1.0"  # Structured error handling
clap = { version = "4.5", features = ["derive"] }  # Parsing des arguments CLI
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true